# book-track-backend

./: .coveragerc  .env.example  .env.test  .flake8  .gitignore  Dockerfile  compose.test.yaml  compose.yaml  coverage-entrypoint.sh  docker-compose.yaml  openapi.yaml  pyproject.toml  run_e2e.sh  sonar-project.properties  test-stage-deps.txt
.github/workflows/: build.yml  deploy.yml  sonarqube.yml
db/migration/: db.master-changelog.xml
db/migration/v-1.0/: changelog-v.1.0-cumulative.xml
db/migration/v-1.0/scripts/: 2025-04-27--001-create-enums.sql  2025-04-27--002-create-user.sql  2025-04-27--003-create-favourite_books.sql  2025-04-27--004-create-reading_list.sql  2025-04-27--005-create-log.sql
db/migration/v-1.1/: changelog-v.1.1-cumulative.xml
db/migration/v-1.1/scripts/: 2025-04-27--001-alter-log.sql  2025-04-27--002-create-trigger-functions.sql  2025-04-27--003-create-triggers.sql  (+1 more)
prometheus/: prometheus.yml
scripts/: run_e2e.sh  run_unit_tests.sh
src/: config.py  coverage_setup.py  database.py  main.py
src/clients/: gutendex_client.py  postgres_client.py
src/cruds/: favourites_crud.py  users_crud.py
src/models/: orm_models.py  schemas.py  user_schemas.py
src/oauth/: auth_algorithm.py  jwt_utils.py  password_utils.py  utils.py
src/routers/: books.py  error_conversions.py  favourites.py  reading_list.py  users.py
tests/: conftest.py  test_books.py  test_favourites.py  test_reading_list.py  test_users.py
tests/docker/: Dockerfile.backend.coverage  Dockerfile.pytest
unit-tests/: test_jwt_utils.py  test_password_utils.py  test_users_crud.py
