[project]
name = "book-track-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Smak"},
    {name = "Smat"},
    {name = "Arturicus"},
    {name = "ism"},
    {name = "Vlad"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "book_track_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
